[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/fonts/Pixeled.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/scripts/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/MALERMEI.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://assets/scenes/QuitPopup.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
extra_spacing_top = -8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFontData" id=7]
antialiased = false
font_path = "res://assets/fonts/Pixeled.ttf"

[sub_resource type="DynamicFont" id=8]
size = 12
font_data = SubResource( 7 )

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.398
anchor_top = 0.399
anchor_right = 0.602
anchor_bottom = 0.601
margin_left = 0.839966
margin_top = -0.420013
margin_right = -0.840088
margin_bottom = 0.419983
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tittle" type="Label" parent="VBoxContainer"]
margin_right = 390.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.835294, 0.568627, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "BARRICADE"
align = 1
valign = 1

[node name="Resume" type="Button" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 390.0
margin_bottom = 98.0
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "RESUME GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 102.0
margin_right = 390.0
margin_bottom = 146.0
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "OPTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 390.0
margin_bottom = 194.0
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Popup" parent="." instance=ExtResource( 5 )]

[node name="Version" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = -35.0
margin_right = 258.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "VERSION: 0.01"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="VBoxContainer/Resume" to="." method="_on_Resume_button_up"]
[connection signal="button_up" from="VBoxContainer/Options" to="." method="_on_Options_button_up"]
[connection signal="button_up" from="VBoxContainer/Quit" to="." method="_on_Quit_button_up"]
